--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <nav>
         <a href="https://napratica.org.br/profissao-engenheiro-de-software/">Sobre</a>
-        <a href="/Estrutura_Semantica/lista.html">Lista</a>
-        <a href="/Estrutura_Semantica/tabela.html">Tabela</a>
+        <a href="lista.html">Lista</a>
+        <a href="tabela.html">Tabela</a>
         </nav>
     </header>
 
