--- a/tabela.html
+++ b/tabela.html
@@ -49,6 +49,6 @@
   </table>
 
 
-<button> <a href="../index.html" > Página Inicial</a></button>
+<button> <a href="index.html" > Página Inicial</a></button>
 </body>
 </html>
